# botcast-worker

./: .compose-cd  .dockerignore  .gitignore  Cargo.toml  Dockerfile  Justfile  compose.dev.yaml  compose.yaml  otel-collector-config.yaml  test.http  test.json
.github/workflows/: review.yml
crates/api/: Cargo.toml
crates/api/src/: client.rs  comment.rs  corner.rs  episode.rs  lib.rs  mail.rs  podcast.rs  script.rs  trpc.rs
crates/audio_generator/: Cargo.toml
crates/audio_generator/src/: audio_downloader.rs  ffmpeg.rs  generate_audio.rs  lib.rs  workdir.rs
crates/audio_generator/src/voicevox/: client.rs  mod.rs  speaker.rs
crates/cli/: .gitignore  Cargo.toml  Justfile
crates/cli/src/: api_client.rs  credential.rs  main.rs  project.rs  provider.rs  trpc.rs
crates/cli/src/api/: client.rs  dto.rs  mod.rs  trpc.rs
crates/cli/src/cmd/: add.rs  eval.rs  list.rs  login.rs  mod.rs  new.rs  pull.rs  push.rs  run.rs
crates/readable_text/: Cargo.toml
crates/readable_text/src/: html2md.rs  html2text.rs  lib.rs
crates/repos/: Cargo.toml
crates/repos/src/: entity.rs  error.rs  lib.rs  postgres.rs  provider.rs  repo.rs  urn.rs
crates/scriper/: Cargo.toml
crates/scriper/src/: html2md.rs
crates/script_audio_generator/: Cargo.toml
crates/script_audio_generator/src/: lib.rs
crates/script_audio_generator/src/voicevox/: api.rs  mod.rs  speaker.rs
crates/script_http_client/: Cargo.toml
crates/script_http_client/src/: lib.rs
crates/script_llm/: Cargo.toml
crates/script_llm/src/: lib.rs
crates/script_runtime/: Cargo.toml
crates/script_runtime/src/: imports.rs  lib.rs  provider.rs  resolve.rs  runtime.rs  xq.rs
crates/script_runtime/src/imports/: api.rs  eval.rs  fetch.rs  jq.rs  llm.rs  mod.rs  repo.rs  rss.rs  time.rs  urn.rs
crates/script_runtime/src/libs/: http_client.rs  mod.rs  rss.rs  xq.rs
crates/script_runtime/src/plugins/: botcast_api.rs  eval.rs  fetch.rs  html.rs  json.rs  llm.rs  mod.rs  rand.rs  rss.rs  time.rs
crates/worker/: Cargo.toml
crates/worker/src/: api.rs  app_module.rs  error.rs  lib.rs  main.rs  r2_storage.rs  worker.rs
crates/worker/src/api/: error.rs  mod.rs  router.rs
crates/worker/src/episode/: episode_service.rs  generate_audio.rs  mod.rs  resolve_urn.rs  scrape_service.rs  script_service.rs
crates/worker/src/infra/: episode_repo.rs  ffmpeg.rs  http_client.rs  mod.rs  r2_storage.rs  script_repo.rs  task_repo.rs  voicevox_client.rs  voicevox_synthesizer.rs
crates/worker/src/model/: mod.rs
crates/worker/src/task/: mod.rs  model.rs  postgres.rs  repo.rs  task_service.rs
crates/worker/src/tasks/: episode.rs  episode_repo.rs  mod.rs  storage.rs  task_repo.rs  workdir.rs
crates/worker/src/usecase/: episode_service.rs  mod.rs  provider.rs  script_service.rs  task_service.rs
crates/worker/src/worker/: mod.rs  task.rs  task_repo.rs
scriper/: Cargo.toml
scriper/src/: extractor.rs  lib.rs
src/: episode.rs  main.rs  model.rs  repo.rs  scrape.rs  synthesis.rs  task.rs  voicevox_client.rs
src/api/: ctx.rs  episode.rs  mod.rs  task.rs
src/worker/: extractor.rs  mod.rs  r2_client.rs  scrape.rs  script.rs  synthesis.rs  task.rs
worker/: Cargo.toml
worker/src/: api.rs  episode.rs  episode_repo.rs  lib.rs  main.rs
worker/src/api/: ctx.rs  mod.rs
worker/src/tasks/: episode.rs  episode_repo.rs  mod.rs  r2_client.rs  storage.rs  voicevox_client.rs
worker/src/worker/: mod.rs  scrape.rs  script.rs  task_repo.rs
