[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
axum = "0.7.5"
html2text = "0.12.5"
html_parser = "0.7.0"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
] }
tokio = { version = "1.39.3", features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
