[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.22"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
anyhow = "1.0.90"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
urlencoding = "2.1.3"
repos = { path = "../repos" }
tokio = { version = "1.39.3", features = ["macros", "rt-multi-thread"] }
async-trait = "0.1.83"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
chrono = { version = "0.4.38", features = ["serde"] }
