[package]
name = "audio_generator"
version = "0.1.0"
edition = "2021"

[dependencies]
api = { path = "../api" }
tracing = "0.1.37"
anyhow = "1.0.89"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
urlencoding = "2.1.3"
async-trait = "0.1.83"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
tokio = { version = "1.39.3", features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
wavers = "1.4.3"
srtlib = "0.2.0"
