[package]
name = "readable_text"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
html2text = "0.12.5"
html_parser = "0.7.0"
log = "0.4.22"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
reqwest = { version = "0.12.7", features = ["json", "blocking"] }
html2md = "0.2.14"
