[package]
name = "script_runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
anyhow = "1.0.89"
async-trait = "0.1.83"
chrono = "0.4.38"
futures = "0.3.31"
json-e = { git = "https://github.com/wakame-tech/json-e", branch = "fix-pub-context" }
# json-e = { path = "../../../json-e/rs" }
xq = "0.4.1"
tl = "0.7.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread", "time"] }
script_http_client = { path = "../script_http_client" }
script_llm = { path = "../script_llm" }
readable_text = { path = "../readable_text" }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
rss = "2.0"
api = { path = "../api" }
