[package]
name = "worker"
version = "0.1.0"
edition = "2021"
default-run = "main"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/bin/cli.rs"

[dependencies]
readable_text = { path = "../readable_text" }
script_http_client = { path = "../script_http_client" }
script_runtime = { path = "../script_runtime" }
script_audio_generator = { path = "../script_audio_generator" }
anyhow = "1.0.86"
axum = "0.7.5"
log = "0.4.22"
reqwest = { version = "0.12.7", features = ["json"] }
rust-s3 = "0.35.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
] }
tokio = { version = "1.39.3", features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
uuid = { version = "1.10.0", features = ["v4", "serde"] }
clap = { version = "4.5.17", features = ["derive"] }
wavers = "1.4.3"
srtlib = "0.2.0"
chrono = "0.4.38"
async-trait = "0.1.83"
