[package]
name = "worker"
version = "0.1.0"
edition = "2021"

[dependencies]
readable_text = { path = "../readable_text" }
script_http_client = { path = "../script_http_client" }
script_runtime = { path = "../script_runtime" }
audio_generator = { path = "../audio_generator" }
repos = { path = "../repos" }
api = { path = "../api" }
anyhow = "1.0.86"
axum = "0.7.5"
tower = "0.5.1"
tower-http = { version = "=0.6.2", features = ["trace"] }
reqwest = { version = "0.12.7", features = ["json"] }
rust-s3 = "0.35.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.1", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "chrono",
    "uuid",
] }
tokio = { version = "1.39.3", features = [
    "macros",
    "process",
    "rt-multi-thread",
] }
futures = "0.3.31"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["json", "env-filter"] }
opentelemetry = { version = "0.27.0", features = ["trace"] }
opentelemetry_sdk = { version = "0.27.0", features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { version = "0.27.0", features = ["trace"] }
tracing-opentelemetry = "0.28.0"
opentelemetry-stdout = { version = "0.27.0", features = ["trace"] }
uuid = { version = "1.10.0", features = ["v4", "serde"] }
clap = { version = "4.5.17", features = ["derive"] }
chrono = "0.4.38"
async-trait = "0.1.83"
cron = "0.12.1"
thiserror = "1.0.64"
json-e = { git = "https://github.com/wakame-tech/json-e", branch = "fix-pub-context" }
